# Zorgit

./: .drone.yml  .env  .gitignore  .gitlab-ci.yml  Cargo.toml  Diesel.toml  LICENSE  README.md  Zorgit.Custom.toml  Zorgit.toml  build.rs  tsconfig.json
common/: Cargo.toml
common/src/: avatar.rs  dotfile.rs  email.rs  entity.rs  entity1.rs  id.rs  lib.rs  notification.rs  password.rs  project.rs  sha1.rs  url.rs
common/src/entities/: mod.rs  organisation.rs  owner.rs  team.rs  unknown.rs  user.rs
db/: Cargo.toml
db/src/: lib.rs  owners.rs  projects.rs  users.rs
migrations/2019-03-29-124735_create_users/: up.sql
migrations/2019-03-31-202406_create_sessions/: up.sql
migrations/2019-04-01-101615_create_projects/: up.sql
migrations/2019-04-16-173507_create_issues/: down.sql  up.sql
migrations/2019-04-26-132829_create_assignees/: down.sql  up.sql
migrations/2019-04-26-144930_create_labels/: down.sql  up.sql
migrations/2019-04-26-144934_create_topics/: down.sql  up.sql
migrations/2019-04-26-144940_create_comments/: up.sql
migrations/2019-06-20-155200_create_attachments/: up.sql
migrations/2019-11-11-140807_create_emails/: down.sql  up.sql
security/: Cargo.toml
security/src/: lib.rs  session_store.rs
security/src/auth_hatch/: hatch.rs  login.rs  mod.rs
security/src/credentials/: basic_auth.rs  mod.rs  password.rs  session.rs
src/: main.rs  url.rs
src/config/: mailer.rs  mod.rs
src/db/: attachment.rs  auth_user.rs  comment.rs  email.rs  issue.rs  label.rs  mod.rs  project.rs  schema.rs  session.rs  topic.rs  user.rs
src/models/: attachment.rs  config.rs  error.rs  mailer.rs  mod.rs  notification.rs  pullrequest.rs  response.rs  session.rs  session_new.rs
src/models/common/: dot_file.rs  email.rs  language.rs  mod.rs  password.rs  sha1.rs  url.rs
src/models/issue/: comment.rs  comment_new.rs  issue.rs  issue_new.rs  label.rs  label_new.rs  mod.rs
src/models/project/: mod.rs  project.rs  project_new.rs  settings.rs  source_entry.rs  source_line.rs  topic.rs
src/models/template/: error.rs  mod.rs  project.rs  template.rs  user.rs
src/models/user/: auth_user.rs  mod.rs  update_account.rs  update_password.rs  update_profile.rs  user.rs  user_new.rs
src/routes/: error_catchers.rs  mod.rs  user.rs
src/routes/project/: branches.rs  code.rs  issues.rs  mod.rs  pull_requests.rs  releases.rs  settings.rs  wiki.rs
src/scripts/: zorgit.ts
src/utils/: crypto.rs  humanize.rs  mod.rs  render.rs
src/vcs/: commit.rs  diff.rs  mod.rs  vcs.rs
src/vcs/git/: cmd.rs  commit.rs  diff.rs  mod.rs  repo.rs
src/vcs/git/server/: mod.rs  routes.rs
static/css/: zorgit-icons.css  zorgit.css
static/css/bulma/0.7.4/css/: bulma-timeline.css  bulma-tooltip.css  bulma.css
templates/: dashboard.html  dashboard_issues.html  dashboard_pull_requests.html  explore.html  home.html
templates/base/: base.html  head.html  login.html  navbar.html  signup.html  under_construction.html
templates/errors/: 401.html  403.html  404.html  422.html  500.html
templates/project/: base.html  branches.html  commit.html  commits.html  forks.html  new.html  pull_request.html  pull_requests.html  releases.html  stars.html  watchers.html  wiki.html
templates/project/code/: base.html  empty.html  file.html  folder.html
templates/project/issues/: comment.html  issue.html  issues.html  labels.html  metas.html  new.html
templates/project/settings/: base.html  branches.html  collaboration.html  project.html
templates/user/: profile.html
templates/user/settings/: account.html  base.html  preferences.html  profile.html  projects.html
vcs/: Cargo.toml
vcs/src/: commit.rs  diff.rs  lib.rs  source_entry.rs  source_line.rs  vcs.rs
vcs/src/git/: cmd.rs  commit.rs  diff.rs  mod.rs  repo.rs
vcs/src/git/server/: mod.rs  routes.rs  service.rs
