[package]
name = "zorgit"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
edition = "2018"
build = "build.rs"


[dependencies]
### Server
#### Core
rocket = { git = "https://github.com/SergioBenitez/Rocket/", rev = "0c150c2", features = ["secrets"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket/", rev = "0c150c2", features = [ "helmet", "json", "serve", "diesel_sqlite_pool" ] }

#### Frontend
url = "2.1.1"
askama = "0.10.3"
askama_rocket = "0.10.0"
pulldown-cmark = { version = "0.8.0", default-features = false, features = ["simd"] }
syntect = { version = "4.4.0", default-features = false, features = ["default-fancy"] }
#tokei = "10.0.1" #Code statistics

#### Internationalization / Localization
unic-langid = "0.9.0"
#fluent-bundle
#fluent-syntax

#### Email invitations and notifications
fast_chemail = "0.9.6"
lettre = "0.9.3"
lettre_email = "0.9.4"
native-tls = "0.2.4"

### Database
diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = "0.17.3", features = ["bundled"] }

### Authentication & Encryption
rocket_airlock = { git = "https://github.com/Weasy666/rocket_airlock" }
data-encoding = "2.3.0"
rust-argon2 = "0.8.2" # features = ["crossbeam-utils"]
rand = "0.7.3"
rand_chacha = "0.2.2"
#pwned = "0.1.2"
time = "0.1.42"

### VCS - Version Control System
#### Git
git2 = "0.13.11"
#find_git = "1.2.0"

### Misc
uuid = { version = "0.8.1", features = ["serde", "v4", "v5"] }
sha1 = "0.6.0"
chrono = "0.4.19"
config = { version = "0.10.1", default-features = false, features = ["toml"] }
once_cell = "1.4.1"
directories = "3.0.1"
walkdir = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"
bytesize = "1.0.1"
blockies = "0.3.0"
#pretty_env_logger = "0.4.0"
log = "0.4.11"
anyhow = "1.0.32"
thiserror = "1.0.20"
remove_dir_all = "0.6.0"
#shrinkwraprs = "0.2.1" # auto derives some Traits to unpack inner values of wrapper types
#identicon-rs = "1.3.0"
#minimap = "0.1.0" # generates a minimap of a code file
#geopattern = "0.3.0" # generates geometric backgrounds/svg-images from a string
#gravatar = "0.2.0"
#clokwerk = "0.1.0"

### GraphQL API
#juniper = "0.11.1"

### Authentication
#oxide-auth = "0.4"     #OAuth2
#inth-oauth2 = "0.16"   #OAuth2
#rocket-auth-login = "0.5" #Login/Logout
#otpauth = "0.2"        #HOTP/TOTP Two-step
#rocket_jwt = "0.1"     #rocket_ext_jwt
#smpl-jwt = "0.4"       #JWT
#medallion = "2.3.1"    #JWT
#rustwt = "1.0"         #JWT

#[build-dependencies]
#headless_chrome = "^0.1"

[dev-dependencies]
#semverver = "0.1.36"
