[package]
name = "zorgit"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "zorgit"
path = "src/main.rs"

[workspace]
members = [ "common", "vcs" ]

[dependencies]
zorgit_common = { path = "./common" }
zorgit_vcs = { path = "./vcs" }
### Server
#### Core
rocket = { git = "https://github.com/SergioBenitez/Rocket/", rev = "c24f15c", default-features = false, features = ["secrets"] }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket/", rev = "c24f15c", default-features = false, features = ["helmet", "json", "serve", "tera_templates", "uuid", "sqlite_pool"] }

#### Frontend
url = { version = "2.2.0", default-features = false, features = ["serde"] }
pulldown-cmark = { version = "0.8.0", default-features = false, features = ["simd"] }
syntect = { version = "4.5.0", default-features = false, features = ["default-fancy"] }
#tokei = "10.0.1" #Code statistics

#### Internationalization / Localization
unic-langid = "0.9.0"
#fluent-bundle
#fluent-syntax

#### Email invitations and notifications
fast_chemail = "0.9.6"
lettre = "0.9.5"
lettre_email = "0.9.4"

### Database
#diesel = { version = "1.4.5", features = ["sqlite", "r2d2", "chrono"] }
#diesel_migrations = "1.4.0"
#libsqlite3-sys = { version = "0.17.3", features = ["bundled"] }

### Authentication & Encryption
rocket_airlock = { git = "https://github.com/Weasy666/rocket_airlock" }
data-encoding = "2.3.2"
#pwned = "0.1.2"
time = "0.2.25"


### Misc
dotenv = "0.15.0"
directories = "3.0.1"
walkdir = "2.3.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.61"
bytesize = "1.0.1"
log = "0.4.14"
anyhow = "1.0.38"
thiserror = "1.0.23"
remove_dir_all = "0.6.1"
#identicon-rs = "1.3.0"
#minimap = "0.1.0" # generates a minimap of a code file
#geopattern = "0.3.0" # generates geometric backgrounds/svg-images from a string
#gravatar = "0.2.0"
#clokwerk = "0.3.3"

### GraphQL API
#async-graphql = { git = "https://github.com/async-graphql/async-graphql" }
#async-graphql-rocket = { git = "https://github.com/async-graphql/async-graphql" }

### Authentication
#oxide-auth = "0.4"     #OAuth2
#inth-oauth2 = "0.16"   #OAuth2
#rocket-auth-login = "0.5" #Login/Logout
#otpauth = "0.2"        #HOTP/TOTP Two-step
#medallion = "2.3.1"    #JWT

#[build-dependencies]
#headless_chrome = "^0.1"

[dev-dependencies]
#semverver = "0.1.36"
