[package]
name = "zorgit_security"
version = "0.1.0"
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket/", default-features = false }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket/", default-features = false, features = ["sqlite_pool"] }
rocket_airlock = { git = "https://github.com/Weasy666/rocket_airlock" }
#rocket_airlock = { path = "../../rocket_airlock" }
time = { version = "0.2.26", default-features = false, features = ["std", "serde"] }
uuid = { version = "0.8.2", default-features = false, features = ["serde", "v4", "v5"] }
sha1 = "0.6.0"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.64", default-features = false, features = ["std"] }
anyhow = "1.0.40"
rand = { version = "0.8.3", default-features = false, features = ["std"] }
rand_chacha = "0.3.0"
rust-argon2 = "0.8.3" # features = ["crossbeam-utils"]
data-encoding = "2.3.2"
unic-langid = "0.9.0"
bincode = "1.3.2"
sled = "0.34.6"
#r2d2_sled = { git = "https://github.com/Weasy666/r2d2-sled" }
#r2d2 = "0.8.9"
